| Summary: | ASTERISK-28349: Pause reason not reported in QueueMember AMI event | ||
| Reporter: | Niksa Baldun (niksa) | Labels: | |
| Date Opened: | 2019-03-26 05:17:22 | Date Closed: | 2020-01-15 06:43:23.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 16.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 9 stable | Attachments: | |
| Description: | When QueuePause AMI action is issued like so:
{code} Action: QueuePause ActionID: 44444 Paused: 1 Reason: Pause1 Interface: Local/777@member_dial {code} Asterisk responds: {code} Event: QueueMemberPause Privilege: agent,all Queue: Testing MemberName: 777 Interface: Local/777@member_dial StateInterface: hint:777@from_phones Membership: dynamic Penalty: 1 CallsTaken: 0 LastCall: 0 LastPause: 0 InCall: 0 Status: 4 Paused: 0 PausedReason: Ringinuse: 0 Reason: Pause1 {code} It is unclear from the documentation what is the difference between "Reason" and "PausedReason" fields, but the actual reason is obviously contained in "Reason" field. However, when QueueStatus action is issued, the QueueMember event only contains "PausedReason" field, which is empty, so there is no way to retrieve the information. {code} Event: QueueMember Queue: Testing Name: 777 Location: Local/777@member_dial StateInterface: hint:777@from_phones Membership: dynamic Penalty: 1 CallsTaken: 0 LastCall: 0 LastPause: 1553593409 InCall: 0 Status: 4 Paused: 1 PausedReason: {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-03-26 05:17:23.264-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Sean Bright (seanbright) 2019-03-26 14:58:21.315-0500 I can reproduce the {{QueueMemberPause}} issue (with {{Reason}} instead of {{PausedReason}}) but I can't reproduce the {{QueueStatus}} action response. This might be due to other changes in my review. If you're building from source, can you try the patch here: https://gerrit.asterisk.org/c/asterisk/+/11170 *Edit:* On second thought, I am going to split the fix for this out into another review. There appears to be a lot of inconsistency with these events. By: Niksa Baldun (niksa) 2019-03-27 07:32:02.934-0500 Indeed, in latest version (16.2.1), response to {{QueueStatus}} is fine. Sorry, I should have checked. There are still inconsistencies, as you noticed, but inconsistencies are the hallmark of Asterisk. :) By: Friendly Automation (friendly-automation) 2020-01-15 06:43:24.214-0600 Change 13625 merged by Friendly Automation: app_queue: Deprecate the QueueMemberPause.Reason field [https://gerrit.asterisk.org/c/asterisk/+/13625|https://gerrit.asterisk.org/c/asterisk/+/13625] By: Friendly Automation (friendly-automation) 2020-01-15 06:44:53.521-0600 Change 13590 merged by Joshua Colp: app_queue: Deprecate the QueueMemberPause.Reason field [https://gerrit.asterisk.org/c/asterisk/+/13590|https://gerrit.asterisk.org/c/asterisk/+/13590] By: Friendly Automation (friendly-automation) 2020-01-15 07:04:46.646-0600 Change 13624 merged by Joshua Colp: app_queue: Deprecate the QueueMemberPause.Reason field [https://gerrit.asterisk.org/c/asterisk/+/13624|https://gerrit.asterisk.org/c/asterisk/+/13624] By: Friendly Automation (friendly-automation) 2020-01-15 07:21:53.101-0600 Change 13623 merged by Joshua Colp: app_queue: Deprecate the QueueMemberPause.Reason field [https://gerrit.asterisk.org/c/asterisk/+/13623|https://gerrit.asterisk.org/c/asterisk/+/13623] | ||